crates/gpui-form-macros/tests/ui/fail/duplicate_helper.stderr
error: duplicate #[form(...)] attribute
 --> tests/ui/fail/duplicate_helper.rs:5:1
  |
5 | #[form(transform(adapter = "validify"))]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
